Added option to enable/disable concavity value normalization.